--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
   </div>
             
                 
-  
+  <script type="text/javascript" src="resp.js"></script>
 </section>
 </body>
 </html>
